calsquash-rankings-style.css
/* Box model */
html {
    box-sizing: border-box;
}
*, *:before, *:after {
    box-sizing: inherit;
}

/* Page layout */
body {
    margin: 0;
}

#container {
    margin: 0 auto;
    max-width: 864px;
    text-align: left;
    padding: 16px;
}

@media all and (min-width: 600px) {
    #container { padding: 32px; }
}

/* Text */
body {
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
    line-height: 1.3em;
    color: #24292e;
    background-color: #fff;
}

p { margin: 0 0 1em 0; }

/* Links */
a {
    text-decoration: none;
    color: #0366d6;
}
a:hover { text-decoration: underline; }

/* Headings */
h2 {
    margin: 1em 0 0.5em 0;
    font-weight: 600;
    padding-bottom: 0.3em;
    font-size: 1.5em;
    border-bottom: 1px solid #eaecef;
}

/* Header */
.breadcrumb {
    margin: 0 0 1.5em 0;
    color: #586069;
}
.project, .file { font-weight: 600; }
.file { color: #24292e; }

/* Tables */
table {
    border-spacing: 0;
    border-collapse: collapse;
}
tr { border-top: 1px solid #c6cbd1; }
th, td {
    padding: 6px 13px;
    border: 1px solid #dfe2e5;
}
th { font-weight: 600; }
tr:nth-child(2n) { background-color: #f6f8fa; }

